RESOLVED FIXED185760
[iOS] Password fields obscure the text with rectangles instead of circles
https://bugs.webkit.org/show_bug.cgi?id=185760
Summary [iOS] Password fields obscure the text with rectangles instead of circles
Myles C. Maxfield
Reported 2018-05-18 02:02:11 PDT
[iOS] Password fields obscure the text with rectangles instead of circles
Attachments
Patch (4.80 KB, patch)
2018-05-18 02:05 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (3.05 MB, application/zip)
2018-05-18 06:25 PDT, EWS Watchlist
no flags
Myles C. Maxfield
Comment 1 2018-05-18 02:05:12 PDT
EWS Watchlist
Comment 2 2018-05-18 06:25:00 PDT
Comment on attachment 340686 [details] Patch Attachment 340686 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/7721482 New failing tests: transitions/created-while-suspended.html
EWS Watchlist
Comment 3 2018-05-18 06:25:02 PDT
Created attachment 340690 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 4 2018-05-18 10:31:52 PDT
Comment on attachment 340686 [details] Patch Clearing flags on attachment: 340686 Committed r231962: <https://trac.webkit.org/changeset/231962>
WebKit Commit Bot
Comment 5 2018-05-18 10:31:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-05-18 10:32:23 PDT
Myles C. Maxfield
Comment 7 2018-05-18 15:22:00 PDT
Note You need to log in before you can comment on or make changes to this bug.