[iOS] Password fields obscure the text with rectangles instead of circles https://bugs.webkit.org/show_bug.cgi?id=185760 <rdar://problem/38644697>

Reviewed by Zalan Bujtas.

Source/WebCore:

Password fields are obscured by drawing U+25CF BLACK CIRCLE. On iOS, we have custom handling
for this character. However, this custom handling is unnecessary and isn't present on macOS.
Instead, we should simply unify the password obscuring codepath between iOS and macOS.

Test: fast/text/black-circle.html

* platform/graphics/ios/FontCacheIOS.mm:
(WebCore::requiresCustomFallbackFont):
(WebCore::FontCache::getCustomFallbackFont):

LayoutTests:

* fast/text/black-circle-expected.html: Added.
* fast/text/black-circle.html: Added.


Canonical link: https://commits.webkit.org/201237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231962 268f45cc-cd09-0410-ab3c-d52691b4dbfc